src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <description>SFDC1-6039: To track time for non BAU work
SFDC1-7727: Adding new picklist values</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Meeting</fullName>
                </value>
                <value>
                    <fullName>In person meeting</fullName>
                </value>
                <value>
                    <fullName>Online customer meeting</fullName>
                </value>
                <value>
                    <fullName>Proposal Accepted meeting</fullName>
                </value>
                <value>
                    <fullName>Proposal Delivery meeting</fullName>
                </value>
                <value>
                    <fullName>Project Work</fullName>
                </value>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Client Visit</fullName>
                </value>
                <value>
                    <fullName>Management Tasks</fullName>
                </value>
                <value>
                    <fullName>Report Generation</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6039: To track time for non BAU work</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5196 Lead field on Task to track the Lead from which it is being converted</description>
        <inlineHelpText>Lookup for Lead, for the Task which is converted from Lead</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MeetingNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Note</label>
        <referenceTo>MeetingNote__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PKIDActivity__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Aty{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Activity</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductFamilyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-3843 : This field will hold the values from the Product Family field</description>
        <inlineHelpText>Please Enter the Product Family</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskToRevisitOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9500 This checkbox will be checked if task is created via &apos;Revisit Opportunity&apos; button</description>
        <inlineHelpText>Task To Revisit Opportunity</inlineHelpText>
        <label>Task To Revisit Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeSpentMinutes__c</fullName>
        <description>SFDC1-6039:This field  track time related non-BAU work</description>
        <label>Time Spent(Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>Zip Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>